--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,13 +1,10 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python package
+name: Python tests run
 
 on:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   build:
@@ -25,8 +22,6 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install package
-      run: |
-        python -m pip install .
+      run: python -m pip install .
     - name: Run unittests
-      run:
-        python -m unittest
+      run: python -m unittest
