--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "gentasks"
 version = "1.0.0"
 dependencies = []
+requires-python='>=3.11'
 
 [tool.setuptools.packages.find]
 # All the following settings are optional:
