--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -1,4 +1,4 @@
-name: Python tests run
+name: Python flake8
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.10"]
 
     steps:
     - uses: actions/checkout@v3
@@ -22,6 +22,6 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install package
-      run: python -m pip install .
-    - name: Run unittests
-      run: python -m unittest
+      run: python -m pip install flake8
+    - name: Run flake8 on source directory
+      run: python -m flake8 src/gentasks
